Adding Management Components

--- a/src/app/manage-community/manage-community.component.html
+++ b/src/app/manage-community/manage-community.component.html
@@ -1,4 +1,7 @@
-<app-user-nav></app-user-nav>
+<app-admin-nav></app-admin-nav>
+
+    <main class="md:ml-64 pt-20">
+        <div class="p-1">
 
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
         <!-- Page Header -->
@@ -278,7 +281,8 @@
             </div>
         </div>
     </div>
-
+</div>
+</main>
  <div id="newPostModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" *ngIf="showModal" (click)="onDocumentClick($event)">
   <div class="bg-white rounded-xl shadow-lg w-full max-w-md mx-4" (click)="$event.stopPropagation()">
             <div class="p-6">
